# worldquant-miner

./: .gitignore  IMPLEMENTATION_SUMMARY.md  LOCAL_TEST_GUIDE.md  QUICK_RELEASE.md  RELEASE.md  RELEASE_GUIDE.md  start_ollama.ps1  test_build_local.ps1  test_build_local.sh
.github/workflows/: release.yml
consultant-templates-ollama/: alpha_tracking.json  dynamic_personas.json  enhanced_template_generator_v2.py  operator_blacklist.json  run_enhanced_generator_v2.py
generation_one/agent-n8n/: ARCHITECTURE.md  README.md  credential.example.txt  env.example
generation_one/agent-next/: README_PINECONE_INTEGRATION.md  middleware.ts  next.config.mjs  package.json  pnpm-lock.yaml  tailwind.config.ts  vercel.json
generation_one/alpha-icu/: README.md  alpha_analyzer.py  alpha_fetcher.py  alpha_gui.py  batch_processor.py  correlation_checker.py  example_usage.py  main.py
generation_one/consultant-atom-up/: README.md  README_ENHANCED_MULTI_THREADED.md  analyze_atom_results.py  atom_test_progress.json  atom_tester.py  credential.example.txt  enhanced_atom_results.json  enhanced_multi_threaded_atom_tester.py  run_atom_tests.py  (+2 more)
generation_two/: .gitignore  build.py  pyproject.toml  setup.py
mini-quant/: README.md  __init__.py  alpha_backtesting_system.py  alpha_pool_storage.py  data_gathering_engine.py  one_man_quant_system.py  quant_research_module.py  requirements.txt  trading_algorithm_engine.py
paper/: README.md  main.tex
paper-zh/: README.md  main.tex
stone_age/rust/: Cargo.toml
stone_age/rust/src/: alpha_generator.rs  api_client.rs  main.rs  models.rs
(+280 files in other folders)
