[package]
name = "alpha_generator"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.5"
log = "0.4"
env_logger = "0.10"
chrono = "0.4"
clap = { version = "4.0", features = ["derive"] }
futures = "0.3"
anyhow = "1.0"
